[-]fixed z-index for datepicker within modal dialogs ITC-644 [-]fixed dateformat for host datepicker

--- a/app/webroot/smartadmin/css/your_style.css
+++ b/app/webroot/smartadmin/css/your_style.css
@@ -1425,3 +1425,7 @@ label[class^='aco-host']:after, label[class^='aco-service']:after{
 	filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='2');
 	-ms-filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='2');
 }
+
+.datepicker{
+	z-index: 1051 !important;
+}
